--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@pqina/pintura": "^8.82.4",
     "axios": "^1.6.8",
+    "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-select": "^4.0.0-beta.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.12.3",
+    "@types/vue-select": "^3.16.8",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
@@ -34,6 +38,7 @@
     "prettier": "^3.0.3",
     "typescript": "~5.4.0",
     "vite": "^5.1.6",
-    "vue-tsc": "^2.0.6"
+    "vue-tsc": "^2.0.6",
+    "vue3-select-component": "^0.2.4"
   }
 }
